# eudaq

./: .gitignore  KILLRUN.sh  STARTRUN  STARTRUN_AHCAL_table.sh  config_ipbus.sh  unpack2017_cfg.py
Geometry/interface/: HGCalTBGeometryParameters.h
RawToDigi/plugins/: PedestalPlotter.cc  RawHitPlotter.cc
conf/: ExampleConfig.conf
etc/scripts/: KILLRUN.local
main/exe/: CMakeLists.txt
main/exe/src/: HGCalProducer.cxx
main/include/hgcal/: parameters.hh
monitors/onlinemon/include/: OnlineMonConfiguration.hh
monitors/onlinemon/src/: CorrelationCollection.cc  OnlineMon.cxx  OnlineMonConfiguration.cc  OnlineMonWindow.cc
producers/cmshgcal/: STARTRUN_PED
producers/cmshgcal/etc/: rdout.xml
producers/cmshgcal/include/: TriggerController.h
producers/cmshgcal/src/: HGCalProducer.cxx  TriggerController.cc
producers/ipbusTest/: CMakeLists.txt  README.md  STARTHEXARUN
producers/ipbusTest/conf/: HExaBoardConfig.conf
producers/ipbusTest/etc/: address.xml
producers/ipbusTest/include/: IpbusTestController.h
producers/ipbusTest/src/: HexaBoardProducer.cxx  IpbusTestController.cc
user/: CMakeLists.txt
user/calice/: CMakeLists.txt
user/calice/EASIROC/: CMakeLists.txt
user/calice/EASIROC/misc/: hodoscope.conf  hodoscope.ini  hodoscope_ahcal_reprocess.conf  hodoscope_ahcal_reprocess.ini
user/calice/EASIROC/misc/autoconfig/: sulogfile.txt
user/calice/EASIROC/misc/setup/: Input8bitDAC1.txt  Input8bitDAC2.txt  PreAmpCtest1.txt  TimeCHGSSh2.txt  _DS_Store
user/calice/EASIROC/module/src/: CaliceEasirocProducer.cc  class_StringManager.cc
(+56 files in other folders)
